# Sail-CV

./: .env  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  Readme.md  TEST_FAILURES_REPORT.md  TEST_STATUS_SUMMARY.md  TODO.txt  analyze_video.py  config.json  generate_raw_detection.py  main.py  pyproject.toml  reduce_to_one_class.py  track_c1_with_crop_module.py  train_rt_detr_3_classes_augmentation.ipynb
.cursor/rules/: docker-infra.mdc  git-workflow.mdc  project-overview.mdc  python-standards.mdc  reconstruction-module.mdc  tracking-module.mdc
.github/workflows/: ci.yml
assets/configs/: sail_3d_example.json
assets/processed/: C1_crop_module_tracked.json
assets/reconstruction/charuco/: references.json
assets/reconstruction/intrinsics/: intrinsics_1_1.json  intrinsics_1_2.json
assets/reconstruction/scene_10/: calibration.json
assets/reconstruction/scene_11/: calibration.json
assets/reconstruction/scene_13/: calibration.json
assets/reconstruction/scene_14/: calibration.json
assets/reconstruction/scene_15/: calibration.json
assets/reconstruction/scene_3/: calibration.json
assets/reconstruction/scene_7/: extrinsics_summary.txt
assets/reconstruction/scene_8/: extrinsics_summary.txt
assets/scene_7/: calibration.json
assets/scene_8/: calibration.json
assets/tracking/layouts/: C1_layout.json
assets/tracking/processed/: C1_crop_module_tracked.json
assets/tracking/raw_detection/: 2Ce-CKKCtV4_raw_detection.json  C1_raw_detection.json
docker/: .env.example  Dockerfile.dev  base.Dockerfile  docker-compose.yml  jetson.Dockerfile  reconstruction.Dockerfile  tracking.Dockerfile
docs/: 22Dec.md  ByteTrack.md
finetuning/: crop_dataset.py  finetune_rtdetr.ipynb  reduce_to_one_class.py  split_yolo_by_source.py  train_classifier.ipynb
finetuning/annotator/: index.html
mast3r/: CHECKPOINTS_NOTICE  NOTICE  README.md
mast3r/assets/output/: mast3r_summary.json
mast3r/assets/output_sparse/: mast3r_summary.json
mast3r/docker/: docker-compose-jetson.yml
mast3r/docker/files/: convert_calibration.py  image.py  jetson.Dockerfile  main.py  mast3r_inference_core.py  mast3r_postprocess.py  mast3r_saver.py  mast3r_utils.py  run_mast3r.py  sam.py  triangulate_matches.py
mast3r/dust3r/: NOTICE  README.md
mast3r/dust3r/croco/: demo.py  pretrain.py
mast3r/dust3r/docker/: docker-compose-cpu.yml  docker-compose-cuda.yml  run.sh
mast3r/dust3r/dust3r/: losses.py  (+2 more)
mast3r/mast3r/: catmlp_dpt_head.py  losses.py  model.py
notebooks/: telltale_tracker_colab.ipynb
parameters/: c1_faker.yaml  default.yaml  default_classifier.yml  default_vector.yml  test.yaml  test_classif.yml  test_vector.yml
reconstruction/: .pre-commit-config.yaml  Makefile
reconstruction/docker/: .env  jetson.Dockerfile
reconstruction/scripts/: check-all.sh
reconstruction/tests/: test_charuco_detector.py  test_checkerboard_detector.py  test_video.py
scripts/: check-all.sh  dev-setup.sh  format.sh  lint.sh  test.sh
src/: calibrate_scenes.py  config.json  create_assets.py  cylinder_fit.py  detector.py  extract_pairs.py  layout_tracker.py  main.py  pipeline.py  process_pairs.py  projection.py  sail_3d_tracker_v2.py  test.py  test_calibration.py  test_video.py  track_video.py  video.py  visualization_3d.py
src/cameras/: __init__.py  cameras.py  render_cameras.py  test_cameras.py
src/cameras_utils/: camera.py
src/classifyer/: classifier.py
src/crop_module/: __init__.py  background_detector_vpi.py  crop_module_pca.py  mask_detector_sam.py
src/dataset/: loader.py
src/models/: __init__.py  background_detector.py  layout.py  pipeline_config.py  sail_3d.py  track.py
src/mv_utils/: __init__.py  extrinsics_calibration.py  image_utils.py  intrinsics_calibration.py  main.py  scene.py  stereo_data_folder_structure.py  utils.py  video_utils.py
src/reconstruction/: calibrate_scenes.py  create_assets.py  cylinder_fit.py  extract_pairs.py  process_pairs.py  reconstruct_pair.py  video.py
src/stereo/: __init__.py  convert_calibration.py  image.py  mast3r.py  saver.py  triangulation.py
src/tracker_utils/: __init__.py  render_tracks.py
src/tracking/: analyze_video.py  annotate_layout_opencv.py  dumper.py  layout_tracker.py  model_weights.py  pipeline.py  projection.py  render_results_video.py  run_detect_layout_classify.py  sail_3d_tracker.py  sail_3d_tracker_v2.py  streamer.py  track_video.py  tracker.py  visualization_3d.py
src/unitaries/: lightglue.py  sam.py  tell_tale_detector.py  test_unitaries.py
tests/: conftest.py  test_calibration.py  test_detector.py  test_pipeline.py  test_process_pair.py  test_tracker.py  test_video.py
tests/cameras/: test_cameras.py
tests/dataset/: test_crop_module.py
tests/reconstruction/: conftest.py  test_calibration.py  test_charuco_detector.py  test_checkerboard_detector.py  test_process_pair.py  test_video.py
tests/stereo/: test_image.py  test_intrinsics_conversion.py  test_intrinsics_conversion_utils.py
tests/tracking/: TEST_ANALYSIS.md  conftest.py  test_classifier_minimal.py  test_crop_module_simple.py  test_detector.py  test_pipeline.py  test_sail_3d_tracker.py  test_sail_3d_tracker_v2.py  test_track_video.py  test_tracker.py  test_video_tracking.py
tests/unitaries/: test_unitaries.py
tracking/: .pre-commit-config.yaml  Makefile
tracking/docs/: 3D_Sail_Tracking.md
tracking/fixtures/: C1_raw_detections.json
tracking/scripts/: dev-setup.sh  test.sh
tracking/src/: dumper.py  sail_3d_tracker.py  video.py
web_app/: __init__.py  main.py  requirements.txt
web_app/components/: __init__.py  batch_processing_interface.py  file_upload.py  point_cloud_viz.py  processing_interface.py  sam_interface.py  ui_factory.py  video_reader.py
web_app/config/: settings.py
web_app/constants/: __init__.py
web_app/exceptions/: __init__.py
web_app/processing/: __init__.py  video_processor.py
web_app/services/: batch_processing_service.py  event_handler.py  processing_service.py  sam_service.py  stereo_processor.py  video_service.py
web_app/utils/: __init__.py  file_utils.py  validation.py
(+117 files in other folders)
